--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# ubuntu dependencies: libasound2-dev && libjack-dev
+# python version 3.7.5, pip version 20.0.2
+
 absl-py==0.9.0
 apache-beam==2.19.0
 argcomplete==1.11.0
@@ -28,13 +31,13 @@ crcmod==1.7
 cycler==0.10.0
 cymem==2.0.3
 cython==0.29.14
-de-core-news-sm==2.2.5
+# de-core-news-sm==2.2.5
 decorator==4.4.1
 dill==0.3.1.1
-dm-sonnet==1.36
+dm-sonnet==1.35
 docopt==0.6.2
 dopamine-rl==3.0.1
-en-core-web-sm==2.2.5
+# en-core-web-sm==2.2.5
 everett==1.0.2
 fastavro==0.21.24
 fasteners==0.15
@@ -95,8 +98,8 @@ mccabe==0.6.1
 mesh-tensorflow==0.1.12
 mido==1.2.6
 mir-eval==0.5
-mkl-fft==1.0.15
-mkl-random==1.1.0
+mkl-fft==1.2.0
+mkl-random==1.2.0
 mkl-service==2.3.0
 mock==2.0.0
 monotonic==1.5
@@ -166,7 +169,7 @@ scikit-learn==0.22
 scipy==1.4.1
 semantic-version==2.8.4
 sentencepiece==0.1.85
-setuptools==42.0.2.post20191203
+setuptools==42.0.2
 six==1.13.0
 sk-video==1.1.10
 sortedcontainers==2.1.0
@@ -177,7 +180,8 @@ srsly==1.0.1
 statsmodels==0.10.2
 sympy==1.5.1
 tabulate==0.8.6
-tensor2tensor==1.15.4
+tensorflow-probability==0.7.0
+tensor2tensor==1.15.0
 tensorboard==1.15.0
 termcolor==1.1.0
 thinc==7.3.1
